bugfix: multiselect visual fix - explicit default text-align to left

--- a/css/less/multiselect.less
+++ b/css/less/multiselect.less
@@ -106,6 +106,7 @@
       border: solid 1px @blend;
       max-height: 200px;
       max-width: 350px;
+      text-align: left;
       @media screen and (max-width: @mobile-max-width) {
         max-height: 80%;
         max-width: unset;
